// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mascot > matches snapshot for love-heart 1`] = `
<svg
  aria-label="Cu Con"
  fill="none"
  height="160"
  role="img"
  viewBox="0 0 400 280"
  width="160"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Cu Con
  </title>
  <defs>
    <radialgradient
      cx="50%"
      cy="100%"
      id="mascotGlow-_r_4_"
      r="100%"
    >
      <stop
        offset="0%"
        style="stop-color: rgb(254, 240, 138); stop-opacity: 0.5;"
      />
      <stop
        offset="44%"
        style="stop-color: rgb(253, 224, 71); stop-opacity: 0.16;"
      />
      <stop
        offset="100%"
        style="stop-color: rgb(255, 255, 255); stop-opacity: 0;"
      />
    </radialgradient>
  </defs>
  <path
    d="M 70,228 A 130 130 0 0 1 330,228 Z"
    fill="url(#mascotGlow-_r_4_)"
  />
  <g
    data-motion-animate="{"opacity":1}"
  >
    <path
      d="M 190 134 C 190 126, 199 123, 204 130 C 209 123, 218 126, 218 134 C 218 142, 211 147, 204 152 C 197 147, 190 142, 190 134 Z"
      fill="#fb7185"
    />
  </g>
  <g
    data-motion-animate="{"y":0,"rotate":0,"scale":1}"
  >
    <g>
      <path
        d="M 168,198 C 168,148 180,138 200,138 C 220,138 232,148 232,198 C 232,218 168,218 168,198 Z"
        fill="#0369a1"
        opacity="0.2"
      />
      <path
        d="M 168,195 C 168,145 180,135 200,135 C 220,135 232,145 232,195 C 232,215 168,215 168,195 Z"
        fill="#0ea5e9"
      />
      <path
        d="M 167,170 C 156,176 155,193 167,198"
        fill="none"
        stroke="#38bdf8"
        stroke-linecap="round"
        stroke-width="4.4"
        style="transform-box: fill-box; transform-origin: right center;"
      />
      <path
        d="M 233,170 C 244,176 245,193 233,198"
        fill="none"
        stroke="#38bdf8"
        stroke-linecap="round"
        stroke-width="4.4"
        style="transform-box: fill-box; transform-origin: left center;"
      />
      <path
        d="M 178 161 C 183 153 189 153 194 161"
        stroke="#0f172a"
        stroke-linecap="round"
        stroke-width="2.5"
      />
      <path
        d="M 206 161 C 211 153 217 153 222 161"
        stroke="#0f172a"
        stroke-linecap="round"
        stroke-width="2.5"
      />
      <circle
        cx="178"
        cy="174"
        fill="#fda4af"
        opacity="0.35"
        r="4.6"
      />
      <circle
        cx="222"
        cy="174"
        fill="#fda4af"
        opacity="0.35"
        r="4.6"
      />
      <path
        d="M 196.2 168.2 L 203.8 168.2 L 200 177.2 Z"
        fill="#f59e0b"
        style="transform-box: fill-box; transform-origin: center top;"
      />
      <polygon
        fill="#f59e0b"
        points="200,182 202,189 208,189 203,193 205,200 200,195 195,200 197,193 192,189 198,189"
      />
      <g
        data-motion-animate="{"opacity":1}"
      >
        <path
          d="M 176 142 C 176 138 181 136 184 140 C 187 136 192 138 192 142 C 192 146 189 149 184 152 C 179 149 176 146 176 142 Z"
          fill="#fb7185"
        />
        <path
          d="M 220 132 C 220 128 224 126 227 130 C 230 126 234 128 234 132 C 234 136 231 139 227 142 C 223 139 220 136 220 132 Z"
          fill="#f43f5e"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Mascot > matches snapshot for playful-music 1`] = `
<svg
  aria-label="Cu Con"
  fill="none"
  height="160"
  role="img"
  viewBox="0 0 400 280"
  width="160"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Cu Con
  </title>
  <defs>
    <radialgradient
      cx="50%"
      cy="100%"
      id="mascotGlow-_r_2_"
      r="100%"
    >
      <stop
        offset="0%"
        style="stop-color: rgb(254, 240, 138); stop-opacity: 0.5;"
      />
      <stop
        offset="44%"
        style="stop-color: rgb(253, 224, 71); stop-opacity: 0.16;"
      />
      <stop
        offset="100%"
        style="stop-color: rgb(255, 255, 255); stop-opacity: 0;"
      />
    </radialgradient>
  </defs>
  <path
    d="M 70,228 A 130 130 0 0 1 330,228 Z"
    fill="url(#mascotGlow-_r_2_)"
  />
  <g
    data-motion-animate="{"opacity":1,"rotate":0}"
  >
    <path
      d="M 188 138 C 198 125, 210 125, 218 138 C 210 151, 198 151, 188 138 Z"
      fill="#22d3ee"
      opacity="0.9"
    />
  </g>
  <g
    data-motion-animate="{"y":0,"rotate":0,"scale":1}"
  >
    <g>
      <path
        d="M 168,198 C 168,148 180,138 200,138 C 220,138 232,148 232,198 C 232,218 168,218 168,198 Z"
        fill="#0369a1"
        opacity="0.2"
      />
      <path
        d="M 168,195 C 168,145 180,135 200,135 C 220,135 232,145 232,195 C 232,215 168,215 168,195 Z"
        fill="#0ea5e9"
      />
      <path
        d="M 167,170 C 156,176 155,193 167,198"
        fill="none"
        stroke="#38bdf8"
        stroke-linecap="round"
        stroke-width="4.4"
        style="transform-box: fill-box; transform-origin: right center;"
      />
      <path
        d="M 233,170 C 244,176 245,193 233,198"
        fill="none"
        stroke="#38bdf8"
        stroke-linecap="round"
        stroke-width="4.4"
        style="transform-box: fill-box; transform-origin: left center;"
      />
      <path
        d="M 178 160 C 182 165 190 165 194 160"
        stroke="#0f172a"
        stroke-linecap="round"
        stroke-width="2.5"
      />
      <circle
        cx="214"
        cy="160"
        fill="#ffffff"
        r="9"
      />
      <circle
        cx="214"
        cy="158"
        fill="#0f172a"
        r="4"
      />
      <circle
        cx="215.5"
        cy="156.5"
        fill="#ffffff"
        r="1.5"
      />
      <circle
        cx="178"
        cy="174"
        fill="#fda4af"
        opacity="0.35"
        r="4.6"
      />
      <circle
        cx="222"
        cy="174"
        fill="#fda4af"
        opacity="0.35"
        r="4.6"
      />
      <path
        d="M 196.8 168.6 L 203.2 168.6 L 200 176 Z"
        fill="#f59e0b"
        style="transform-box: fill-box; transform-origin: center top;"
      />
      <polygon
        fill="#f59e0b"
        points="200,182 202,189 208,189 203,193 205,200 200,195 195,200 197,193 192,189 198,189"
      />
      <g
        data-motion-animate="{"opacity":1}"
      >
        <path
          d="M 174 140 L 174 156 C 174 159 171 161 168 160 C 166 158 166 155 168 154 C 170 153 172 153 173 154 L 173 142 L 184 139 L 184 152 C 184 155 181 157 178 156 C 176 155 176 152 178 151 C 180 150 182 150 183 151 L 183 137 Z"
          fill="#3730a3"
        />
        <path
          d="M 218 148 L 218 163 C 218 166 215 168 212 167 C 210 166 210 163 212 162 C 214 161 216 161 217 162 L 217 150 L 227 147 L 227 160 C 227 163 224 165 221 164 C 219 163 219 160 221 159 C 223 158 225 158 226 159 L 226 145 Z"
          fill="#4338ca"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Mascot > matches snapshot for proud-magic 1`] = `
<svg
  aria-label="Cu Con"
  fill="none"
  height="160"
  role="img"
  viewBox="0 0 400 280"
  width="160"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Cu Con
  </title>
  <defs>
    <radialgradient
      cx="50%"
      cy="100%"
      id="mascotGlow-_r_3_"
      r="100%"
    >
      <stop
        offset="0%"
        style="stop-color: rgb(254, 240, 138); stop-opacity: 0.5;"
      />
      <stop
        offset="44%"
        style="stop-color: rgb(253, 224, 71); stop-opacity: 0.16;"
      />
      <stop
        offset="100%"
        style="stop-color: rgb(255, 255, 255); stop-opacity: 0;"
      />
    </radialgradient>
  </defs>
  <path
    d="M 70,228 A 130 130 0 0 1 330,228 Z"
    fill="url(#mascotGlow-_r_3_)"
  />
  <g
    data-motion-animate="{"opacity":1}"
  >
    <path
      d="M 182 138 L 188 120 L 196 130 L 204 120 L 212 130 L 218 120 L 220 138 Z"
      fill="#facc15"
      stroke="#f59e0b"
      stroke-width="1"
    />
  </g>
  <g
    data-motion-animate="{"y":0,"rotate":0,"scale":1}"
  >
    <g>
      <path
        d="M 168,198 C 168,148 180,138 200,138 C 220,138 232,148 232,198 C 232,218 168,218 168,198 Z"
        fill="#0369a1"
        opacity="0.2"
      />
      <path
        d="M 168,195 C 168,145 180,135 200,135 C 220,135 232,145 232,195 C 232,215 168,215 168,195 Z"
        fill="#0ea5e9"
      />
      <path
        d="M 167,170 C 156,176 155,193 167,198"
        fill="none"
        stroke="#38bdf8"
        stroke-linecap="round"
        stroke-width="4.4"
        style="transform-box: fill-box; transform-origin: right center;"
      />
      <path
        d="M 233,170 C 244,176 245,193 233,198"
        fill="none"
        stroke="#38bdf8"
        stroke-linecap="round"
        stroke-width="4.4"
        style="transform-box: fill-box; transform-origin: left center;"
      />
      <circle
        cx="186"
        cy="160"
        fill="#ffffff"
        r="9"
        style="transform-box: fill-box; transform-origin: center;"
      />
      <circle
        cx="186"
        cy="158"
        fill="#0f172a"
        r="4"
        style="transform-box: fill-box; transform-origin: center;"
      />
      <circle
        cx="187.5"
        cy="156.5"
        fill="#ffffff"
        r="1.5"
      />
      <circle
        cx="214"
        cy="160"
        fill="#ffffff"
        r="9"
        style="transform-box: fill-box; transform-origin: center;"
      />
      <circle
        cx="214"
        cy="158"
        fill="#0f172a"
        r="4"
        style="transform-box: fill-box; transform-origin: center;"
      />
      <circle
        cx="215.5"
        cy="156.5"
        fill="#ffffff"
        r="1.5"
      />
      <path
        d="M 196.2 168.2 L 203.8 168.2 L 200 177.2 Z"
        fill="#f59e0b"
        style="transform-box: fill-box; transform-origin: center top;"
      />
      <polygon
        fill="#f59e0b"
        points="200,182 202,189 208,189 203,193 205,200 200,195 195,200 197,193 192,189 198,189"
      />
      <g
        data-motion-animate="{"opacity":1}"
      >
        <path
          d="M 176 142 L 200 124 L 224 142 Z"
          fill="#4338ca"
          stroke="#a5b4fc"
          stroke-width="1.2"
        />
        <rect
          fill="#3730a3"
          height="5.4"
          rx="2.4"
          width="32.4"
          x="183.8"
          y="141.2"
        />
        <path
          d="M 203.3 127 L 210 117"
          stroke="#fef08a"
          stroke-linecap="round"
          stroke-width="1.2"
        />
        <circle
          cx="211.4"
          cy="115.2"
          fill="#fef08a"
          r="2"
        />
      </g>
    </g>
  </g>
</svg>
`;
